<resources>
    <string name="app_name">Users</string>

    <string name="something_went_wrong">something went wrong</string>
    <string name="retry">retry</string>
    <string name="no_results_found">No Results Found</string>
    <string name="can_t_load_users">can\'t load users</string>
    <string name="tom_hardy">Tom Hardy</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="fake_url">https://github.com/square</string>

    <string name="user_name_label">User Name: </string>
    <string name="followers_url_label">Followers Url: </string>
    <string name="following_url_label">Following Url: </string>

</resources>