<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.fragments.UserDetailFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageViewDetail"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            tools:text="@string/tom_hardy" />


        <TextView
            android:id="@+id/tvUserFollowersUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:alpha="0.7"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="18sp"
            tools:text="@string/fake_url" />

        <TextView
            android:id="@+id/tvUserFollowingUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:alpha="0.7"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="18sp"
            tools:text="@string/fake_url" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/followers"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/purple_200"
            android:textSize="20sp" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/follower_list_item" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/following"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/purple_200"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/following_list_item" />

    </LinearLayout>
</ScrollView>
